--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="style.css">
   <link rel="icon" type="image/png" href="nex.png">
 </head>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <body>
 
 <nav>
