--- a/index.html
+++ b/index.html
@@ -6,17 +6,24 @@
   <title>Nex | Digital Innovation</title>
   <link rel="stylesheet" href="style.css">
   <link rel="icon" type="image/png" href="nex.png">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <body>
 
 <nav>
-  <div class="logo">Nex</div>
-  <ul>
-    <li><a href="/">Home</a></li>
-    <li><a href="/services">Services</a></li>
-    <li><a href="/projects">Projects</a></li>
-    <li><a href="/contact">Contact</a></li>
+  <div class="logo">Abdenour</div>
+  
+  <div class="hamburger" id="hamburger">
+    <span></span>
+    <span></span>
+    <span></span>
+  </div>
+
+  <ul id="nav-links">
+    <li><a href="index.html">Home</a></li>
+    <li><a href="#services">Services</a></li>
+    <li><a href="#projects">Projects</a></li>
+    <li><a href="#contact">Contact</a></li>
   </ul>
 </nav>
 
@@ -24,7 +31,7 @@
   <section class="hero">
     <h1 class="fade-in">Welcome to Nex Website</h1>
     <p class="fade-in">We Build The Future Of Digital Innovation</p>
-    <button class="fade-in" aria-label="Get Started">Get Started</button>
+    <button id="getStartedBtn" class="fade-in">Get Started</button>
   </section>
 
   <section id="services" class="services">
@@ -72,23 +79,52 @@
   </section>
 </main>
 
+
+<div id="loginModal" class="modal">
+  <div class="modal-content">
+    <span class="close-btn">&times;</span>
+    
+    <div id="login-area">
+      <h2>Login to Nex</h2>
+      <form id="loginForm">
+        <input type="text" id="login-username" placeholder="Username" required>
+        <input type="password" id="login-pass" placeholder="Password" required>
+        <button type="submit" class="login-submit">Login</button>
+      </form>
+      <p>Don't have an account? <a href="#" id="go-to-signup">Sign Up</a></p>
+    </div>
+
+    <div id="signup-area" style="display: none;">
+      <h2>Create New Account</h2>
+      <form id="signupForm">
+        <input type="text" id="signup-username" placeholder="Choose Username" required>
+        <input type="password" id="signup-pass" placeholder="Password (min 8 chars)" required>
+        <input type="password" id="confirm-pass" placeholder="Confirm Password" required>
+        <button type="submit" class="login-submit" style="background: #ff00c8;">Create Account</button>
+      </form>
+      <p>Already have an account? <a href="#" id="go-to-login">Login</a></p>
+    </div>
+  </div>
+</div>
+
+<script src="system.js"></script>
+
 <footer id="contact">
-  <p>© 2026 Nex - All Rights Reserved</p>
-  <p>Programmed By Abdenour<p>
+  <div class="social-links">
+    <a href="https://instagram.com/z5zy0" target="_blank" class="social-icon">
+      <i class="fab fa-instagram"></i>
+    </a>
+    <a href="https://discord.gg/z7_d" target="_blank" class="social-icon">
+      <i class="fab fa-discord"></i>
+    </a>
+    <a href="https://t.me/z5zy0" target="_blank" class="social-icon">
+      <i class="fab fa-telegram-plane"></i>
+    </a>
+  </div>
+  <p>Programmed By Abdenour</p>
+<p>© 2026 Nex - All Rights Reserved</p>
 </footer>
 
-<script>
-  window.addEventListener('DOMContentLoaded', () => {
-    const fadeElements = document.querySelectorAll('.fade-in');
-    fadeElements.forEach((el, index) => {
-      // Small delay to ensure CSS is applied
-      setTimeout(() => {
-        el.style.opacity = "1";
-        el.style.transform = "translateY(0)";
-      }, index * 300);
-    });
-  });
-</script>
-
 </body>
+
 </html>
