--- a/index.html
+++ b/index.html
@@ -7,9 +7,10 @@
   <link rel="stylesheet" href="style.css">
   <link rel="icon" type="image/png" href="nex.png">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+  <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
 </head>
 <body>
-
+<div id="particles-js" style="position: fixed; width: 100%; height: 100%; z-index: -1;"></div>
 <nav>
   <div class="logo">Abdenour</div>
   
