--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <body>
 <div id="particles-js" style="position: fixed; width: 100%; height: 100%; z-index: -1;"></div>
 <nav>
+  <button onclick="toggleTheme()" style="padding: 5px 15px; font-size: 12px;">Change Color</button>
   <div class="logo">Abdenour</div>
   
   <div class="hamburger" id="hamburger">
@@ -109,6 +110,20 @@
 </div>
 
 <script src="system.js"></script>
+
+  <section class="services">
+  <h2>Frequently Asked Questions</h2>
+  <div class="faq-container" style="max-width: 600px; margin: 0 auto; text-align: left;">
+    <details style="background: rgba(255,255,255,0.05); padding: 15px; border-radius: 10px; margin-bottom: 10px; cursor: pointer;">
+      <summary style="color: #00f5ff; font-weight: bold;">How long does a project take?</summary>
+      <p style="padding-top: 10px; color: #ccc;">Usually 2-4 weeks depending on the complexity.</p>
+    </details>
+    <details style="background: rgba(255,255,255,0.05); padding: 15px; border-radius: 10px; margin-bottom: 10px; cursor: pointer;">
+      <summary style="color: #00f5ff; font-weight: bold;">Do you offer support?</summary>
+      <p style="padding-top: 10px; color: #ccc;">Yes, we provide 24/7 technical support for all our clients.</p>
+    </details>
+  </div>
+</section>
 
 <footer id="contact">
   <div class="social-links">
